# invest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily-download.yml  deploy.yml
migrations/: env.py
migrations/versions/: 001_initial_tables.py  002_add_technical_indicators.py
scripts/: backfill.py  backfill_indicators.py  download_once.py
src/: api.py  config.py  database.py  downloader.py  indicators.py  main.py  models.py  stock_list.py
tests/: test_downloader.py
